[package]
name          = "tcp-stream"
version       = "0.30.0"
authors       = ["Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
edition       = "2021"
description   = "std::net::TcpStream on steroids"
repository    = "https://github.com/amqp-rs/tcp-stream"
documentation = "https://docs.rs/tcp-stream"
keywords      = ["tcp", "io", "async", "non-blocking"]
categories    = ["asynchronous", "network-programming"]
license       = "BSD-2-Clause"
rust-version  = "1.81.0"

[lib]
name = "tcp_stream"

[features]
default                   = ["rustls-native-certs", "rustls--aws_lc_rs"]
native-tls                = ["dep:native-tls", "dep:rustls-pemfile"]
openssl                   = ["dep:openssl"]
rustls-webpki-roots-certs = ["rustls-common", "rustls-connector/webpki-roots-certs"]
rustls-native-certs       = ["rustls-common", "rustls-connector/native-certs"]
rustls-common             = ["dep:rustls-connector", "dep:rustls-pemfile", "dep:p12-keystore"]
vendored-openssl          = ["openssl", "openssl/vendored"]

# rustls crypto providers. Choose at least one. Otherwise, runtime errors.
# See https://docs.rs/rustls/latest/rustls/#crate-features. for more info
rustls--aws_lc_rs         = ["dep:rustls-connector", "rustls-connector/rustls--aws_lc_rs"] # default, but doesn't build everywhere
rustls--ring              = ["dep:rustls-connector", "rustls-connector/rustls--ring"] # more compatible, (e.g., easily builds on Windows)

[dependencies]
cfg-if = "^1.0"

[dependencies.native-tls]
version  = "^0.2"
optional = true

[dependencies.openssl]
version  = "^0.10.46"
optional = true

[dependencies.p12-keystore]
version = "^0.1"
optional = true

[dependencies.rustls-pemfile]
version = "^2.0"
optional = true

[dependencies.rustls-connector]
version          = "^0.21.5"
optional         = true
default-features = false

[package.metadata.docs.rs]
all-features = true

[badges]
maintenance = { status = "actively-developed" }
